# ygo-card-tool

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  tag.yml
example/cards/: 40737112.json  65330383.json
include/: hd.h  strings.h  ygo_database.h  ygo_errno.h  ygo_nfc.h
lib/libusb-win32/: .gitignore  CMakeLists.txt  README.txt
src/: CMakeLists.txt  cmd_write.c  hd.c  main.c  ygo_database.c  ygo_nfc.c
